--- a/voluncheer/static/css/chatroom.css
+++ b/voluncheer/static/css/chatroom.css
@@ -1,18 +1,18 @@
 @font-face {
     font-family: 'Zenkaku';
-    src: url('../fonts/ZenKakuGothicNew-Light.ttf'); format('truetype');
+    src: url('../fonts/ZenKakuGothicNew-Light.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'Zenkaku';
-    src: url('../fonts/ZenKakuGothicNew-Bold.ttf'); format('truetype');
+    src: url('../fonts/ZenKakuGothicNew-Bold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
 }
 @font-face {
     font-family: 'Zenkaku';
-    src: url('../fonts/ZenKakuGothicNew-Regular.ttf'); format('truetype');
+    src: url('../fonts/ZenKakuGothicNew-Regular.ttf') format('truetype');
     font-weight: auto;
     font-style: normal;
 }
