--- a/voluncheer/static/css/jobboard.css
+++ b/voluncheer/static/css/jobboard.css
@@ -6,25 +6,25 @@
 }
 @font-face {
     font-family: 'SourceSansProLight';
-    src: url('../fonts/SourceSansPro-Light-webfont.ttf'); format('truetype');
+    src: url('../fonts/SourceSansPro-Light-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'Zenkaku';
-    src: url('../fonts/ZenKakuGothicNew-Light.ttf'); format('truetype');
+    src: url('../fonts/ZenKakuGothicNew-Light.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'Zenkaku';
-    src: url('../fonts/ZenKakuGothicNew-Bold.ttf'); format('truetype');
+    src: url('../fonts/ZenKakuGothicNew-Bold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
 }
 @font-face {
     font-family: 'Zenkaku';
-    src: url('../fonts/ZenKakuGothicNew-Regular.ttf'); format('truetype');
+    src: url('../fonts/ZenKakuGothicNew-Regular.ttf') format('truetype');
     font-weight: auto;
     font-style: normal;
 }
