"Set Registration User as AUTH_USER_MODEL"

--- a/voluncheer/templates/voluncheer/registration.html
+++ b/voluncheer/templates/voluncheer/registration.html
@@ -46,7 +46,7 @@
           <div class="mb-3">
            
             <!-- rendering the form with django widget tweak -->
-            {% render_field form.age class='form-control' placeholder=form.age.label %}
+            {% render_field form.date_of_birth class='form-control' placeholder=form.date_of_birth.label %}
           </div>
 
           
