added basic webpage load test

--- a/voluncheer/templates/voluncheer/jobboard.html
+++ b/voluncheer/templates/voluncheer/jobboard.html
@@ -127,7 +127,7 @@
 		<div id="secwrapper">
 			<section>
 {#      django script goes here       #}
-            <form class="jobs-showcase" action="{% url 'job_board:select' %}" method="post">
+            <form class="jobs-showcase" action="{% url 'jobboard:select' %}" method="post">
 				<article id="photobox">
 					<h1>Badges You Can Earn</h1>
 					<img src="../../static/images/badge-1.png" alt=""/>
