--- a/voluncheer/templates/registration/login.html
+++ b/voluncheer/templates/registration/login.html
@@ -23,6 +23,8 @@
         {{ form.password|as_crispy_field }}
         <button type="submit" class="btn btn-primary">Log in</button>
       </form>
+      <br>
+      <p><a href="{% url 'password_reset' %}">Forgot Password</a></p>
     </div>
   </div>
 {% endblock %}
