--- a/voluncheer/static/css/app.css
+++ b/voluncheer/static/css/app.css
@@ -146,6 +146,7 @@ body {
     font-size: 28px;
     padding: 0 10px;
     width: 70%;
+    font-family: Zenkaku, sans-serif;
 }
 
 .main h2 {
@@ -257,6 +258,23 @@ tr {
 
 td {
     min-width: 40px;
+}
+
+.edit-form {
+    border: none;
+    font-size: 16px;
+    width: 90%;
+}
+.edit-form input {
+    width: 100%;
+}
+#edit-form-edit {
+    display: none;
+}
+
+#edit-form-edit-btn {
+    width: 100px;
+    margin-top: 10px;
 }
 
 /* End */
