--- a/voluncheer/templates/base.html
+++ b/voluncheer/templates/base.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Voluncheer</title>
     <link rel="stylesheet" href="{% static 'css/app.css' %}">
+    <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -17,8 +18,6 @@
           <div class="row">
             <div class="col-6">
               <h1 class="logo">
-                <a href="{% url 'home' %}">
-                  VolunCHEER!
                   {% if user.is_authenticated %}
                     {% if user.is_organization %}
                       <span data-toggle="tooltip" data-placement="right" title="Organization profile"></span>
@@ -26,7 +25,6 @@
                       <span data-toggle="tooltip" data-placement="right" title="Volunteer profile"></span>
                     {% endif %}
                   {% endif %}
-                </a>
               </h1>
             </div>
             <div class="col-6 text-right">
