--- a/voluncheer/templates/navbar.html
+++ b/voluncheer/templates/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 <div class="navbar-top">
   <div class="title">
-    <img src="{% static 'images/voluncheer_logo.png' %}" alt="logo" class="logo" height="80px">
+      <a href="{% url 'home' %}"><img src="{% static 'images/voluncheer_logo.png' %}" alt="logo" class="logo" height="80px"></a>
   </div>
   <ul>
     <li>
