--- a/voluncheer/templates/profiles/profile.html
+++ b/voluncheer/templates/profiles/profile.html
@@ -2,7 +2,6 @@
 {% load static %}
 {% block content %}
   {% if user.is_organization %}
-  <h2 class="mb-3">{{ organization }}</h2>
     <!-- Sidenav -->
     <div class="sidenav">
         <div class="profile">
@@ -29,26 +28,26 @@
         <h2>ABOUT US</h2>
         <div class="card">
             <div class="card-body">
-{#                <i class="fa fa-pen fa-xs edit"></i>#}
-                <table>
-                    <tbody>
+                <i class="fa fa-pen fa-xs edit" onclick="EditProfile()"></i>
+                    <div class="edit-form" id="edit-form-view">
                         <tr>
-                            <td>Webpage</td>
-                            <td>:</td>
-                            <td>{{ organization.website }}</td>
+                        Name:
+                        <input type="text" value="{{ organization.name }}" contenteditable="false">
                         </tr>
                         <tr>
-                            <td>Email</td>
-                            <td>:</td>
-                            <td>{{ user.email }}</td>
+                        Website:
+                        <input type="text" value="{{ organization.website }}" contenteditable="false">
                         </tr>
                         <tr>
-                            <td>Address</td>
-                            <td>:</td>
-                            <td>{{ organization.address_city }}</td>
+                        E-mail:
+                        <input type="text" value="{{ organization.email }}" contenteditable="false">
                         </tr>
-                    </tbody>
-                </table>
+                    </div>
+                    <form method="post" class="edit-form" id="edit-form-edit" action="{% url 'profile_update' %}">
+                        {% csrf_token %}
+                        {{ user_form }}
+                        <button type="submit" id="edit-form-edit-btn" class="edit-form">Submit</button>
+                    </form>
             </div>
         </div>
 
@@ -72,12 +71,11 @@
     </div>
     <!-- End -->
 
-    <div class="card-footer text-muted">
-      Email: <strong>{{ user.email }}</strong>
-    </div>
   </div>
+
+
+
   {% elif user.is_volunteer %}
-  <h2 class="mb-3">Hi {{ volunteer }}!</h2>
   </div>
     <!-- Side Nav -->
     <div class="sidenav">
@@ -107,31 +105,26 @@
         <h2>ABOUT ME</h2>
         <div class="card">
             <div class="card-body">
-{#                <i class="fa fa-pen fa-xs edit"></i>#}
-                <table>
-                    <tbody>
+                <i class="fa fa-pen fa-xs edit" onclick="EditProfile()"></i>
+                    <div class="edit-form" id="edit-form-view">
                         <tr>
-                            <td>Last Name</td>
-                            <td>:</td>
-                            <td>{{ volunteer.last_name }}</td>
+                        First name:
+                        <input type="text" value="{{ volunteer.first_name }}" contenteditable="false">
                         </tr>
                         <tr>
-                            <td>First Name</td>
-                            <td>:</td>
-                            <td>{{ volunteer.first_name }}</td>
+                        Last name:
+                        <input type="text" value="{{ volunteer.last_name }}" contenteditable="false">
                         </tr>
                         <tr>
-                            <td>Date of Birth</td>
-                            <td>:</td>
-                            <td>{{ volunteer.date_of_birth }}</td>
+                        Date of birth:
+                        <input type="text" value="{{ volunteer.date_of_birth }}" contenteditable="false">
                         </tr>
-                        <tr>
-                            <td>Skills</td>
-                            <td>:</td>
-                            <td>{{ volunteer.user_skill }}</td>
-                        </tr>
-                    </tbody>
-                </table>
+                    </div>
+                    <form method="post" class="edit-form" id="edit-form-edit" action="{% url 'profile_update' %}">
+                        {% csrf_token %}
+                        {{ user_form }}
+                        <button type="submit" id="edit-form-edit-btn" class="edit-form">Submit</button>
+                    </form>
             </div>
         </div>
 
@@ -146,12 +139,6 @@
                 {% endfor %}
             </div>
         </div>
-    </div>
-    <!-- End -->
-
-    <div class="card-footer text-muted main">
-      Email: <strong>{{ user.email }}</strong><br>
-      Date of Birth: <strong>{{ volunteer.date_of_birth }}</strong><br>
     </div>
     <!-- End -->
   {% endif %}
