--- a/voluncheer/templates/profiles/profile.html
+++ b/voluncheer/templates/profiles/profile.html
@@ -5,7 +5,7 @@
     <!-- Sidenav -->
     <div class="sidenav">
         <div class="profile">
-            <img src="{% static organization.organization_image %}" alt="" width="100" height="100"/>
+            <img src="../../static/images/default-profile-pic.png" alt="portrait" width="100" height="100"/>
             <div class="name">
                 {{ organization.name }}
             </div>
@@ -80,7 +80,7 @@
     <!-- Side Nav -->
     <div class="sidenav">
         <div class="profile">
-            <img src="{% static volunteer.user_image %}" alt="" width="100" height="100"/>
+            <img src="../../static/images/default-profile-pic.png" alt="profile pic" width="100" height="100"/>
             <div class="name">
                 {{ volunteer.first_name }}, {{ volunteer.last_name }}
             </div>
