--- a/voluncheer/templates/profiles/profile.html
+++ b/voluncheer/templates/profiles/profile.html
@@ -5,7 +5,9 @@
     <!-- Sidenav -->
     <div class="sidenav">
         <div class="profile">
-            <img src="../../static/images/default-profile-pic.png" alt="portrait" width="100" height="100"/>
+            <div class="col-md-4">
+                <img src="{{user.photo.url}}" alt="profile pic" width="100" height="100"/>
+            </div>
             <div class="name">
                 {{ organization.name }}
             </div>
@@ -80,7 +82,9 @@
     <!-- Side Nav -->
     <div class="sidenav">
         <div class="profile">
-            <img src="../../static/images/default-profile-pic.png" alt="profile pic" width="100" height="100"/>
+            <div class="col-md-4">
+                <img src="{{user.photo.url}}" alt="profile pic" width="100" height="100"/>
+            </div>
             <div class="name">
                 {{ volunteer.first_name }}, {{ volunteer.last_name }}
             </div>
