basic photo placeholder and buttons done

--- a/voluncheer/templates/profiles/photo_image_form.html
+++ b/voluncheer/templates/profiles/photo_image_form.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hotel_image</title>
+    <title>Profile_Photo</title>
 </head>
 <body>
     <form method = "post" enctype="multipart/form-data">
