Dump user profile editing and email password change feature to develop

--- a/voluncheer/static/css/app.css
+++ b/voluncheer/static/css/app.css
@@ -268,6 +268,9 @@ td {
 .edit-form input {
     width: 100%;
 }
+.edit-form textarea {
+    width: 100%;
+}
 #edit-form-edit {
     display: none;
 }
