--- a/voluncheer/templates/navbar.html
+++ b/voluncheer/templates/navbar.html
@@ -17,7 +17,7 @@
       </a>
     </li>
     <li>
-      <a href="logout">
+      <a href="{% url 'logout' %}">
         <i class="fa fa-sign-out-alt fa-2x"></i>
       </a>
     </li>
