--- a/voluncheer/templates/profiles/profile.html
+++ b/voluncheer/templates/profiles/profile.html
@@ -6,7 +6,7 @@
     <div class="sidenav">
         <div class="profile">
             <div class="col-md-4">
-                <img src="{{user.photo.url}}" alt="profile pic" width="100" height="100"/>
+                <img src="{{organization.photo.url}}" alt="profile pic" width="100" height="100"/>
             </div>
             <div class="name">
                 {{ organization.name }}
@@ -46,7 +46,7 @@
                         </tr>
                         <tr>
                         Photo:
-                        <input type="image" value="{{ user.photo }}" contenteditable="false">
+                        <input type="image" value="{{ organization.photo }}" contenteditable="false">
                         </tr>
                     </div>
                     <form method="post" class="edit-form" id="edit-form-edit" enctype="multipart/form-data" action="{% url 'profile_update' %}">
@@ -87,7 +87,7 @@
     <div class="sidenav">
         <div class="profile">
             <div class="col-md-4">
-                <img src="{{user.photo.url}}" alt="profile pic" width="100" height="100"/>
+                <img src="{{volunteer.photo.url}}" alt="profile pic" width="100" height="100"/>
             </div>
             <div class="name">
                 {{ volunteer.first_name }}, {{ volunteer.last_name }}
@@ -129,7 +129,7 @@
                         </tr>
                         <tr>
                         Photo:
-                        <input type="image" value="{{ user.photo }}" contenteditable="false">
+                        <input type="image" value="{{volunteer.photo }}" contenteditable="false">
                         </tr>
                     </div>
                     <form method="post" class="edit-form" id="edit-form-edit" enctype="multipart/form-data" action="{% url 'profile_update' %}">
