--- a/voluncheer/templates/profiles/profile.html
+++ b/voluncheer/templates/profiles/profile.html
@@ -63,6 +63,8 @@
 					    <a href="#"><img src="{% static job.job_image %}" alt="" class="vol-position-image" width="275px"/></a>
 					    <p class="vol-position-disciption-h1">{{ job.title }}</p>
                         <p class="vol-position-disciption-h3">{{ job.pubdate }}</p>
+                        <p class="vol-position-disciption-h3">{{ job.date }}</p>
+                        <p class="vol-position-disciption-h3">{{ job.duration }}</p>
                         <p class="vol-position-disciption-h2">{{ job.address_1 }}</p>
                         <p class="vol-position-disciption-h2">{{ job.description }}</p>
                         <div class="url"><a href="#" class="readmore">Connect</a></div>
