--- a/voluncheer/templates/profiles/profile.html
+++ b/voluncheer/templates/profiles/profile.html
@@ -9,10 +9,17 @@
             <div class="name">
                 {{ organization.name }}
             </div>
+            <div class="email">
+                {{ user.email }}
+            </div>
+            <hr align="center">
+            <div class="self-description">
+                <p>{{ organization.description }}</p>
+            </div>
         </div>
         <div class="sidenav-url">
             <div class="url">
-                <a href="{% url 'post_a_job' %}" class="active">POST A JOB</a>
+                <a href="{% url 'post_an_opportunity' %}" class="active">POST A JOB</a>
                 <hr align="center">
             </div>
             <div class="url">
@@ -36,11 +43,7 @@
                         </tr>
                         <tr>
                         Website:
-                        <input type="text" value="{{ organization.website }}" contenteditable="false">
-                        </tr>
-                        <tr>
-                        E-mail:
-                        <input type="text" value="{{ organization.email }}" contenteditable="false">
+                        <a href="https://{{ organization.website }}"><input type="text" value="{{ organization.website }}" contenteditable="false"></a>
                         </tr>
                     </div>
                     <form method="post" class="edit-form" id="edit-form-edit" action="{% url 'profile_update' %}">
@@ -55,13 +58,13 @@
         <div class="card">
             {% csrf_token %}
                 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
-                {% for job in job_lists %}
+                {% for opportunity in opportunity_lists %}
                     <article>
-					    <a href="#"><img src="{% static job.job_image %}" alt="" class="vol-position-image" width="275px"/></a>
-					    <p class="vol-position-disciption-h1">{{ job.title }}</p>
-                        <p class="vol-position-disciption-h3">{{ job.pubdate }}</p>
-                        <p class="vol-position-disciption-h2">{{ job.address_1 }}</p>
-                        <p class="vol-position-disciption-h2">{{ job.description }}</p>
+					    <a href="#"><img src="{% static opportunity.opportunity_image %}" alt="" class="vol-position-image" width="275px"/></a>
+					    <p class="vol-position-disciption-h1">{{ opportunity.title }}</p>
+                        <p class="vol-position-disciption-h3">{{ opportunity.pubdate }}</p>
+                        <p class="vol-position-disciption-h2">{{ opportunity.address_1 }}</p>
+                        <p class="vol-position-disciption-h2">{{ opportunity.description }}</p>
                         <div class="url"><a href="#" class="readmore">Connect</a></div>
                         <hr align="center">
 				    </article>
@@ -83,8 +86,12 @@
             <div class="name">
                 {{ volunteer.first_name }}, {{ volunteer.last_name }}
             </div>
-            <div class="job">
+            <div class="email">
                 {{ user.email }}
+            </div>
+            <hr align="center">
+            <div class="self-description">
+                <p>{{ volunteer.description }}</p>
             </div>
         </div>
 
