Changed JOBS to OPPORTUNITIES in templates

--- a/voluncheer/templates/opportunityboard/postanopportunity.html
+++ b/voluncheer/templates/opportunityboard/postanopportunity.html
@@ -12,7 +12,7 @@
         </div>
         <div class="sidenav-url">
             <div class="url">
-                <a href="{% url 'post_an_opportunity' %}" class="active">POST A JOB</a>
+                <a href="{% url 'post_an_opportunity' %}" class="active">POST A OPPORTUNITY</a>
                 <hr align="center">
             </div>
             <div class="url">
@@ -25,7 +25,7 @@
 
     <!-- Main -->
     <div class="main">
-        <h2>JOB DETAILS</h2>
+        <h2>OPPORTUNITY DETAILS</h2>
         <div class="card">
             <div class="card-body">
                 <form method="post" class="edit-form" id="" action="{% url 'post_an_opportunity' %}">
