--- a/voluncheer/templates/voluncheer/opportunityboard.html
+++ b/voluncheer/templates/voluncheer/opportunityboard.html
@@ -21,8 +21,8 @@
 			<nav>
 				<ul>
 					<li><a href="#" class="current">HOME</a></li>
-					<li><a href="#">JOBS</a></li>
-					<li><a href="#">POST A JOB</a></li>
+					<li><a href="#">OPPORTUNITIES</a></li>
+					<li><a href="#">POST A OPPORTUNITY</a></li>
 					<li><a href="#">LOGIN</a></li>
 				</ul>
 			</nav>
