Eden: debugged picture uploading feature

--- a/voluncheer/templates/profiles/profile.html
+++ b/voluncheer/templates/profiles/profile.html
@@ -6,7 +6,7 @@
     <div class="sidenav">
         <div class="profile">
             <div class="col-md-4">
-                <img src="{{user.photo.url}}" alt="profile pic" width="100" height="100"/>
+                <img src="{{organization.photo.url}}" alt="profile pic" width="100" height="100"/>
             </div>
             <div class="name">
                 {{ organization.name }}
@@ -45,7 +45,7 @@
                         <input type="text" value="{{ organization.email }}" contenteditable="false">
                         </tr>
                     </div>
-                    <form method="post" class="edit-form" id="edit-form-edit" action="{% url 'profile_update' %}">
+                    <form method="post" enctype="multipart/form-data" class="edit-form" id="edit-form-edit" action="{% url 'profile_update' %}">
                         {% csrf_token %}
                         {{ user_form }}
                         <button type="submit" id="edit-form-edit-btn" class="edit-form">Submit</button>
@@ -83,7 +83,7 @@
     <div class="sidenav">
         <div class="profile">
             <div class="col-md-4">
-                <img src="{{user.photo.url}}" alt="profile pic" width="100" height="100"/>
+                <img src="{{volunteer.photo.url}}" alt="profile pic" width="100" height="100"/>
             </div>
             <div class="name">
                 {{ volunteer.first_name }}, {{ volunteer.last_name }}
@@ -124,7 +124,7 @@
                         <input type="text" value="{{ volunteer.date_of_birth }}" contenteditable="false">
                         </tr>
                     </div>
-                    <form method="post" class="edit-form" id="edit-form-edit" action="{% url 'profile_update' %}">
+                    <form method="post" enctype="multipart/form-data" class="edit-form" id="edit-form-edit" action="{% url 'profile_update' %}">
                         {% csrf_token %}
                         {{ user_form }}
                         <button type="submit" id="edit-form-edit-btn" class="edit-form">Submit</button>
