--- a/voluncheer/templates/navbar.html
+++ b/voluncheer/templates/navbar.html
@@ -5,6 +5,11 @@
   </div>
   <ul>
     <li>
+      <a href="{% url 'opportunityboard' %}">
+        <i class="fa fa-th fa-2x"></i>
+      </a>
+    </li>
+    <li>
       <a href="messages">
         <span class="icon-count">29</span>
         <i class="fa fa-envelope fa-2x"></i>
