Added all categories to db and fixed form bug

--- a/voluncheer/templates/opportunityboard/postanopportunity.html
+++ b/voluncheer/templates/opportunityboard/postanopportunity.html
@@ -51,7 +51,9 @@
                         'category': categoryId       
                       },
                       success: function (data) {   
-                        $("#id_subcategory").html(data);  
+                        $("#id_subcategory").html(data);
+                        $("#id_subsubcategory").html(data);
+
                       }
                     });
               
