--- a/voluncheer/templates/opportunityboard/updateanopportunity.html
+++ b/voluncheer/templates/opportunityboard/updateanopportunity.html
@@ -25,10 +25,10 @@
 
     <!-- Main -->
     <div class="main">
-        <h2>OPPORTUNITY DETAILS</h2>
+        <h2>UPDATE OPPORTUNITY DETAILS</h2>
         <div class="card">
             <div class="card-body">
-                <form method="post" enctype="multipart/form-data" class="edit-form" id="" action="{% url 'post_an_opportunity' %}">
+                <form method="post" enctype="multipart/form-data" class="edit-form" id="" action="{% url 'update_an_opportunity' opportunity_id%}">
                     {% csrf_token %}
                     {{ opportunity_form.as_p }}
                     <button type="submit" id="edit-form-edit-btn" class="edit-form">Post</button>
