added delete button and save progress when update

--- a/voluncheer/templates/opportunityboard/updateanopportunity.html
+++ b/voluncheer/templates/opportunityboard/updateanopportunity.html
@@ -32,6 +32,7 @@
                     {% csrf_token %}
                     {{ opportunity_form.as_p }}
                     <button type="submit" id="edit-form-edit-btn" class="edit-form">Post</button>
+                    <button type="submit" name="delete" id="edit-form-edit-btn" class="edit-form">Delete</button>
                 </form>
             </div>
         </div>
