--- a/voluncheer/templates/opportunityboard/updateanopportunity.html
+++ b/voluncheer/templates/opportunityboard/updateanopportunity.html
@@ -28,12 +28,66 @@
         <h2>UPDATE OPPORTUNITY DETAILS</h2>
         <div class="card">
             <div class="card-body">
-                <form method="post" enctype="multipart/form-data" class="edit-form" id="" action="{% url 'update_an_opportunity' opportunity_id%}">
+                <form method="post" 
+                class="edit-form" 
+                id="opportunity_edit" 
+                enctype="multipart/form-data" 
+                data-subcat-url="{% url 'ajax_load_subcategories' %}" 
+                data-subsubcat-url="{% url 'ajax_load_subsubcategories' %}" 
+                action="{% url 'update_an_opportunity' opportunity_id%}">
                     {% csrf_token %}
                     {{ opportunity_form.as_p }}
                     <button type="submit" id="edit-form-edit-btn" class="edit-form">Post</button>
                     <button type="submit" name="delete" id="edit-form-edit-btn" class="edit-form">Delete</button>
                 </form>
+                
+                <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+                <script>
+
+                $("#id_category").change(function () {
+                    var categoryId = $(this).val(); 
+
+                    //Update subcategory...
+                    var url = $("#opportunity_edit").attr("data-subcat-url");  
+                    $.ajax({                      
+                      url: url,                    
+                      data: {
+                        'category': categoryId       
+                      },
+                      success: function (data) {   
+                        $("#id_subcategory").html(data);
+                      }
+                    });
+
+                    //...then update subsubcategory
+                    url = $("#opportunity_edit").attr("data-subsubcat-url");
+                    $.ajax({                      
+                      url: url,                    
+                      data: {
+                        'category': categoryId       
+                      },
+                      success: function (data) {   
+                        $("#id_subsubcategory").html(data);
+                      }
+                    });
+                  });
+
+                $("#id_subcategory").change(function () {
+                    var subcategoryId = $(this).val();
+                    
+                    //Update subcategory only
+                    var url = $("#opportunity_edit").attr("data-subsubcat-url");  
+                    $.ajax({                       
+                      url: url,                    
+                      data: {
+                        'subcategory': subcategoryId       
+                      },
+                      success: function (data) {   
+                        $("#id_subsubcategory").html(data);  
+                      }
+                    });
+                  });
+                </script>
             </div>
         </div>
     </div>
