--- a/voluncheer/templates/opportunityboard/updateanopportunity.html
+++ b/voluncheer/templates/opportunityboard/updateanopportunity.html
@@ -5,7 +5,9 @@
     <!-- Sidenav -->
     <div class="sidenav">
         <div class="profile">
+          {% if organization.photo %}
             <img src="{{organization.photo.url}}" alt="profile pic" width="100" height="100"/>
+            {% endif %}
             <div class="name">
                 {{ organization.name }}
             </div>
@@ -38,6 +40,7 @@
                     {% csrf_token %}
                     {{ opportunity_form.as_p }}
                     <button type="submit" id="edit-form-edit-btn" class="edit-form">Post</button>
+                    <button type="submit" name="delete" id="edit-form-edit-btn" class="edit-form">Delete</button>
                 </form>
                 
                 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
